// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app: simple action test suite should create appStatusSet action 1`] = `
Object {
  "payload": 0,
  "type": "app/appStatusSet",
}
`;

exports[`app: simple action test suite should create appStatusSet action 2`] = `
Object {
  "payload": 1,
  "type": "app/appStatusSet",
}
`;

exports[`app: simple action test suite should create appUserSet action 1`] = `
Object {
  "payload": null,
  "type": "app/appUserSet",
}
`;

exports[`app: simple action test suite should create appUserSet action 2`] = `
Object {
  "payload": Object {
    "NIBR521": "TESTUSR1",
    "NIBREMAIL": "test.user@novartis.com",
    "NIBRFirst": "Test",
    "NIBRFull": "Test User",
    "NIBRLast": "User",
    "NIBRSite": "chbs",
  },
  "type": "app/appUserSet",
}
`;
